fix: fixed overflow issues on the project section by applying the overflow-y property on mainNav

--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,8 @@
         transform-origin: left;
 
         transition: opacity 0.25s linear, transform 0.25s linear;
+
+        overflow-y: scroll;
     }
 
     @media (max-width: 425px) {
